--- a/wp-content/plugins/candela-utility/themes/bombadil/style.css
+++ b/wp-content/plugins/candela-utility/themes/bombadil/style.css
@@ -733,6 +733,7 @@ span.small.xhtml {
 	-webkit-box-shadow: none;
 	box-shadow: none;
 	margin: 0 auto;
+  padding: .25em 2em 2em 2em;
 	/*padding: 0.25em 3em 3em 3em;*/
 	/*box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);*/
 	border-radius: 6px;
@@ -1004,8 +1005,6 @@ ul.lti-mapping {
 @media screen {
 	#content {
 		width: 90%;
-    /*padding: 0.25em 3em 3em 3em;
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);*/
 	}
 	.nav {
 		width: 900px;
