--- a/wp-content/plugins/candela-utility/themes/bombadil/style.css
+++ b/wp-content/plugins/candela-utility/themes/bombadil/style.css
@@ -732,11 +732,10 @@ span.small.xhtml {
 	-o-box-shadow: none;
 	-webkit-box-shadow: none;
 	box-shadow: none;
-	margin: 0 auto;
-  padding: .25em 2em 2em 2em;
-	/*padding: 0.25em 3em 3em 3em;*/
+	margin: .25em auto;
+  padding: .25em 1.75em 1.75em 1.75em;
 	/*box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);*/
-	border-radius: 6px;
+	/*border-radius: 6px;*/
 }
 #content ol li, #content ul li {
 	margin-bottom: 0.5em;
