remove min-width styling applied to iframes, which was causing embedded youtube videos to span 100% the width of its parent container, which looked strange.

--- a/wp-content/plugins/candela-utility/themes/bombadil/style.css
+++ b/wp-content/plugins/candela-utility/themes/bombadil/style.css
@@ -401,7 +401,7 @@ nav {
   max-height: 35px;
   background-color: #fafafa;
 	padding: 4px;
-	border-bottom: 1px #000 solid;
+	border-bottom: 1px #afafaf solid;
 }
 .center-subtext-search {
 	max-width: 940px;
@@ -847,7 +847,7 @@ div#wrap {
   line-height: 1.3;
 }
 #content iframe {
-  min-width: 100%;
+  /*min-width: 100%;*/
   max-width: 100%;
   margin: 1em auto;
 }
