--- a/wp-content/plugins/pressbooks/themes-book/donham/_fonts-web.scss
+++ b/wp-content/plugins/pressbooks/themes-book/donham/_fonts-web.scss
@@ -6,4 +6,4 @@ $sans-serif-web: sans-serif !default;
 $font-1: "Tinos", $serif-web;
 $font-2: "Galdeano", $sans-serif-web;
 
-@import url("http://fonts.googleapis.com/css?family=Galdeano|Tinos:400,400italic,700,700italic");
+@import url("https://fonts.googleapis.com/css?family=Galdeano|Tinos:400,400italic,700,700italic");
