--- a/wp-content/plugins/pressbooks/themes-book/donham/style.css
+++ b/wp-content/plugins/pressbooks/themes-book/donham/style.css
@@ -8,7 +8,7 @@ Copyright 2011-2015 Book Oven Inc. (Pressbooks.com) code@pressbooks.com
 Version: 1.6
 Template: pressbooks-book
 */
-@import url("http://fonts.googleapis.com/css?family=Galdeano|Tinos:400,400italic,700,700italic");
+@import url("https://fonts.googleapis.com/css?family=Galdeano|Tinos:400,400italic,700,700italic");
 body {
   font-family: "Tinos", serif;
   line-height: 1.5em;
