--- a/wp-content/plugins/pressbooks/themes-book/fitzgerald/_fonts-web.scss
+++ b/wp-content/plugins/pressbooks/themes-book/fitzgerald/_fonts-web.scss
@@ -6,4 +6,4 @@ $sans-serif-web: sans-serif !default;
 $font-1: "Crimson Text", "Times New Roman", $serif-web;
 $font-2: "Roboto Condensed", $sans-serif-web;
 
-@import url("http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,700|Roboto+Condensed:400,300,300italic,400italic");
+@import url("https://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,700|Roboto+Condensed:400,300,300italic,400italic");
