--- a/wp-content/plugins/pressbooks/themes-book/fitzgerald/style.css
+++ b/wp-content/plugins/pressbooks/themes-book/fitzgerald/style.css
@@ -8,7 +8,7 @@ Copyright 2011-2015 Book Oven Inc. (Pressbooks.com) code@pressbooks.com
 Version: 1.6
 Template: pressbooks-book
 */
-@import url("http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,700|Roboto+Condensed:400,300,300italic,400italic");
+@import url("https://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,700|Roboto+Condensed:400,300,300italic,400italic");
 body {
   font-family: "Crimson Text", "Times New Roman", serif;
   line-height: 1.5em;
