remove sub-nav when no subtitle or search box
Test:
1. for any book using the bombadil theme, select appearance->theme options
2. choose navigation options, then enable search bar and part title
3. view page in book and add ?content_only to end of url
4. page should display both options
5. go back to navigation options and disable search bar and part title
6. view page again with ?content_only
7. page should no longer display options or single bottom border line
8. try different combinations to make sure works as expected

--- a/wp-content/plugins/candela-utility/themes/bombadil/style.css
+++ b/wp-content/plugins/candela-utility/themes/bombadil/style.css
@@ -398,10 +398,17 @@ nav {
 }
 .sub-nav {
   margin: 0;
-  max-height: 35px;
+  height: 35px;
   background-color: #fafafa;
 	padding: 4px;
 	border-bottom: 1px #afafaf solid;
+}
+.no-sub-nav {
+  margin: 0;
+  height: 35px;
+  background-color: #fafafa;
+	padding: 4px;
+  border-bottom: 0px;
 }
 .center-subtext-search {
 	max-width: 940px;
@@ -445,7 +452,6 @@ nav {
 .searchform #searchsubmit:hover {
   background-color: #0897cb;
 }
-
 
 /* ------------------------------------------------------------------------ *
  * TITLE, SUBTITLE, AUTHORS & APHORISM
