update css and part title wording

--- a/wp-content/plugins/candela-utility/themes/bombadil/style.css
+++ b/wp-content/plugins/candela-utility/themes/bombadil/style.css
@@ -406,7 +406,7 @@ nav {
 .no-sub-nav {
   margin: 0;
   height: 35px;
-  background-color: #fafafa;
+  background-color: #fff;
 	padding: 4px;
   border-bottom: 0px;
 }
