--- a/wp-content/plugins/candela-utility/themes/bombadil/style.css
+++ b/wp-content/plugins/candela-utility/themes/bombadil/style.css
@@ -56,6 +56,9 @@ img {
 .pullleft {
 	margin-right: 4%;
 }
+.hidden {
+    display: none;
+}
 
 
 /* ------------------------------------------------------------------------ *
