--- a/wp-content/plugins/candela-utility/themes/washington/css/custom.css
+++ b/wp-content/plugins/candela-utility/themes/washington/css/custom.css
@@ -13,6 +13,7 @@ h1, h2, h3, h4, h5, h6 {
 	color: #0288d1;
 	font-family: "proxima-nova", sans-serif;
 	font-weight: 600;
+  text-transform: none;
 }
 ul li {
 	list-style-type: none;
@@ -305,21 +306,21 @@ div#wrap {
 }
 #content h3 {
 	font-size: 1em;
-	text-transform: uppercase;
-	margin-top: 1em;
+	/*text-transform: uppercase;*/
+	/*margin-top: 1em;*/
 }
 
 #content h4 {
 	font-size: 0.9em;
 	font-weight: 400;
-	text-transform: uppercase;
+	/*text-transform: uppercase;*/
 	color: #1ABC9C;
 }
 
 #content h5 {
 	font-size: 0.8em;
 	font-weight: 400;
-	text-transform: uppercase;
+	/*text-transform: uppercase;*/
 	color: #1ABC9C;
 }
 #content img {
@@ -351,11 +352,11 @@ div#wrap {
 	top: 1.75em;
 }
 #content .bcc-success {
-	background-color: #e1f4ff;
-	margin-bottom: 1.5em;
+	/*background-color: #e1f4ff;
+	margin-bottom: 1.5em;*/
 }
 .bcc-box.bcc-success h3 {
-	background-color: #0288d1;
+	/*background-color: #0288d1;*/
 }
 .bcc-box h3:first-child {
 	text-align: center;
