--- a/wp-content/plugins/candela-utility/themes/washington/style.css
+++ b/wp-content/plugins/candela-utility/themes/washington/style.css
@@ -40,8 +40,11 @@ h2 {
 h2, h3, h4 {
 	font-style: normal;
 }
-h3, h4 {
+/*h3, h4 {
 	text-transform: uppercase;
+}*/
+h3 {
+	text-align: left;
 }
 
 h1 + p,
@@ -188,51 +191,106 @@ p.cc-block{
 	Textbook specific styles
 ********************************/
 
-.bcc-box{
-	/*	width: 100%;*/
-	padding: 2% 3%;
-	margin-bottom: 15px;
-	border-radius: 4px;
+.bcc-box {
+  border: 1px solid #000;
+  margin: 10px 0;
+  padding: 10px;
 }
-
-.bcc-box h3:first-child{
-	text-align: center;
-	margin: -2% -3% 15px;
-	color: #ffffff;
-	padding: 15px 0 15px;
-
+.bcc-box p {
+  margin-top: 0;
 }
-
-.bcc-highlight{
-	background-color: #f7f7f9;
+.bcc-box.shaded {
+  background-color: #eee;
 }
-
-.bcc-box.bcc-highlight h3{
-	background-color: #111111;
+.bcc-box {
+  border-radius: 4px;
+  margin-bottom: 15px;
+  padding: 2% 3%;
+  margin-inside: auto;
+  margin-outside: auto;
+  float: none;
+  background-color: #F7F7F9;
 }
-
-.bcc-success{
-	background-color: #eaf5ea;
+.bcc-box h3 {
+  color: #fff;
+  margin: -2% -3% 15px;
+  padding: 15px 0;
+  text-align: center;
+  text-transform: uppercase;
 }
-
-.bcc-box.bcc-success h3{
-	background-color: #3a7a33;
+/*.textbox h3 {
+  text-transform: uppercase;
+	margin-top: 1px;
+}*/
+.bcc-box.bcc-highlight h3 {
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  background-color: #111111;
 }
-
-.bcc-info{
-	background-color: #e3eff6;
+.bcc-box.bcc-success {
+  border-radius: 4px;
+  margin-bottom: 15px;
+  padding: 2% 3%;
+  margin-inside: auto;
+  margin-outside: auto;
+  float: none;
+  background-color: #EAF5EA;
 }
-
-.bcc-box.bcc-info h3{
-	background-color: #0b6396;
+.bcc-box.bcc-success h3 {
+  color: #fff;
+  margin: -2% -3% 15px;
+  padding: 15px 0;
+  text-align: center;
 }
-
-.bcc-warning {
-	background-color: #fcf8e3;
+.bcc-box.bcc-success h3 {
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  background-color: #3A7A33;
 }
-
-.bcc-box.bcc-warning h3{
-	background-color: #c09853;
+.bcc-box.bcc-info {
+  border-radius: 4px;
+  margin-bottom: 15px;
+  padding: 2% 3%;
+  margin-inside: auto;
+  margin-outside: auto;
+  float: none;
+  background-color: #E3EFF6;
+}
+.bcc-box.bcc-info h3 {
+  color: #fff;
+  margin: -2% -3% 15px;
+  padding: 15px 0;
+  text-align: center;
+}
+.bcc-box.bcc-info h3 {
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  background-color: #0B6396;
+}
+.bcc-box.bcc-warning {
+  border-radius: 4px;
+  margin-bottom: 15px;
+  padding: 2% 3%;
+  margin-inside: auto;
+  margin-outside: auto;
+  float: none;
+  background-color: #F3E1E3;
+}
+.bcc-box.bcc-warning h3 {
+  color: #fff;
+  margin: -2% -3% 15px;
+  padding: 15px 0;
+  text-align: center;
+}
+.bcc-box.bcc-warning h3 {
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  background-color: #7A333A;
+}
+.bcc-box-caption {
+  display: block;
+  font: bold 0.875em Helvetica, Arial;
+  margin: 0;
 }
 
 span.export-file-icon{
