--- a/wp-content/plugins/candela-utility/themes/washington/css/custom.css
+++ b/wp-content/plugins/candela-utility/themes/washington/css/custom.css
@@ -339,7 +339,7 @@ div#wrap {
 	border-radius: 4px;
 }
 #content .bcc-box h3 {
-	margin-top: 0;
+	margin-top: 1px;
 }
 .difficulty {
 	float: right;
