--- a/wp-content/plugins/candela-utility/themes/candela-advanced/style.css
+++ b/wp-content/plugins/candela-utility/themes/candela-advanced/style.css
@@ -288,6 +288,10 @@ span.small.xhtml {
 
 }
 
+#content ul li {
+	margin-left: 1em;
+}
+
 /*************************
 	Media queries
 **************************/
