--- a/wp-content/plugins/candela-utility/themes/candela-advanced/css/custom.css
+++ b/wp-content/plugins/candela-utility/themes/candela-advanced/css/custom.css
@@ -15,7 +15,7 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight: 600;
 }
 ul li {
-	list-style-type: none;
+	/*list-style-type: none;*/
 }
 .btn .red {
 	background-color: #a51b1b;
@@ -306,7 +306,7 @@ div#wrap {
 #content h3 {
 	font-size: 1em;
 	text-transform: uppercase;
-	margin-top: 1em;
+	/*margin-top: 1em;*/
 }
 
 #content h4 {
@@ -326,7 +326,7 @@ div#wrap {
 	margin-top: 0.5em auto;
 }
 #content ul li {
-	list-style-type: disc;
+	/*list-style-type: disc;*/
 	margin-left: 1em;
 }
 #content blockquote {
