Remove bullet list style from the ToC when using Candela Advanced Theme
The theme was applying bullets to table of contents items in the candela
advanced theme (deprecated). Bulleted list items no longer show on the
ToC in in Candela Advanced, but does allow bulleted lists on all other
pages.

--- a/wp-content/plugins/candela-utility/themes/candela-advanced/css/custom.css
+++ b/wp-content/plugins/candela-utility/themes/candela-advanced/css/custom.css
@@ -17,6 +17,9 @@ h1, h2, h3, h4, h5, h6 {
 ul li {
 	/*list-style-type: none;*/
 }
+#table-of-content {
+  list-style-type: none;
+}
 .btn .red {
 	background-color: #a51b1b;
 	background-image: -webkit-gradient(linear, left top, left bottom, from(rgb(179, 56, 56)), to(rgb(165, 27, 27)));
